--- a/UnitConverter/UnitConverter.Web/Views/Shared/_Layout.cshtml
+++ b/UnitConverter/UnitConverter.Web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Konwerter jednostek", "Index", "Home")</li>
                     <li>@Html.ActionLink("Historia konwersji", "ConversionHistory", "Home")</li>
+                    <li>@Html.ActionLink("Konwertery użytkownika", "Converters", "Home")</li>
                     <li>@Html.ActionLink("O witrynie", "About", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
                 </ul>
