--- a/UnitConverter/UnitConverter/View/MainWindow.xaml
+++ b/UnitConverter/UnitConverter/View/MainWindow.xaml
@@ -5,43 +5,120 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UnitConversion"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="550" Width="800">
+    <TabControl>
+        <TabItem Header="Konwersja jednostek">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Content="Rodzaj konwersji" VerticalAlignment="Center"/>
+                <ComboBox Name="cbConversionType" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5" Height="25" SelectedItem="{Binding Mode=OneWayToSource, Path=SelectedUnitConverter}" ItemsSource="{Binding UnitConverters}"/>
+                <Label Content="Jednostka początkowa" Grid.Row="1" VerticalAlignment="Center"/>
+                <Label Content="Wartość początkowa" Grid.Row="3" VerticalAlignment="Center"/>
+                <Label Content="Jednostka końcowa" Grid.Row="2" VerticalAlignment="Center"/>
+                <ComboBox Name="cbUnitFrom" Grid.Row="1" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=SourceUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
+                <TextBox Grid.Row="3" Grid.Column="1" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWayToSource, Path=InputValue, UpdateSourceTrigger=PropertyChanged}"/>
+                <ComboBox Name="cbUnitTo" Grid.Row="2" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=TargetUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
+                <StackPanel Grid.Column="2" Grid.Row="4" Orientation="Horizontal">
+                    <Label Content="Wynik" VerticalAlignment="Center"/>
+                    <TextBlock x:Name="tbResult" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWay, Path=Result}"/>
+                </StackPanel>
+                <DataGrid x:Name="dgConversionHistory" Grid.ColumnSpan="2" Grid.Row="5" ItemsSource="{Binding ConversionHistory}" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Rodzaj konwersji" Binding="{Binding ConversionType}" Width="*"/>
+                        <DataGridTextColumn Header="Data konwersji" Binding="{Binding Created}" Width="*"/>
+                        <DataGridTextColumn Header="Jednostka bazowa" Binding="{Binding BaseUnit}" Width="0.8*"/>
+                        <DataGridTextColumn Header="Wartość bazowa" Binding="{Binding BaseValue}" Width="0.7*"/>
+                        <DataGridTextColumn Header="Jednostka docelowa" Binding="{Binding TargetUnit}" Width="0.8*"/>
+                        <DataGridTextColumn Header="Wartość docelowa" Binding="{Binding TargetValue}" Width="0.7*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <Button Command="{Binding ConvertCommand}" Content="Przelicz" Grid.Row="4" Margin="10,5,10,5"/>
+            </Grid>
+        </TabItem>
+        <TabItem Header="Konwertery użytkownika">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1.5*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="Rodzaj konwersji" VerticalAlignment="Center"/>
-        <ComboBox Name="cbConversionType" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5" Height="25" SelectedItem="{Binding Mode=OneWayToSource, Path=SelectedUnitConverter}" ItemsSource="{Binding UnitConverters}"/>
-        <Label Content="Jednostka początkowa" Grid.Row="1" VerticalAlignment="Center"/>
-        <Label Content="Wartość początkowa" Grid.Row="3" VerticalAlignment="Center"/>
-        <Label Content="Jednostka końcowa" Grid.Row="2" VerticalAlignment="Center"/>
-        <ComboBox Name="cbUnitFrom" Grid.Row="1" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=SourceUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWayToSource, Path=InputValue, UpdateSourceTrigger=PropertyChanged}"/>
-        <ComboBox Name="cbUnitTo" Grid.Row="2" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=TargetUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
-        <StackPanel Grid.Column="2" Grid.Row="4" Orientation="Horizontal">
-            <Label Content="Wynik" VerticalAlignment="Center"/>
-            <TextBlock x:Name="tbResult" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWay, Path=Result}"/>
-        </StackPanel>
-        <DataGrid x:Name="dgConversionHistory" Grid.ColumnSpan="2" Grid.Row="5" ItemsSource="{Binding ConversionHistory}" AutoGenerateColumns="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Rodzaj konwersji" Binding="{Binding ConversionType}" Width="*"/>
-                <DataGridTextColumn Header="Data konwersji" Binding="{Binding Created}" Width="*"/>
-                <DataGridTextColumn Header="Jednostka bazowa" Binding="{Binding BaseUnit}" Width="0.8*"/>
-                <DataGridTextColumn Header="Wartość bazowa" Binding="{Binding BaseValue}" Width="0.7*"/>
-                <DataGridTextColumn Header="Jednostka docelowa" Binding="{Binding TargetUnit}" Width="0.8*"/>
-                <DataGridTextColumn Header="Wartość docelowa" Binding="{Binding TargetValue}" Width="0.7*"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <Button Command="{Binding ConvertCommand}" Content="Przelicz" Grid.Row="4" Margin="10,5,10,5"/>
-    </Grid>
+                <DataGrid Name="dgUserConverters" Grid.Row="0" Grid.Column="0" ItemsSource="{Binding UserConverters}" SelectedValue="{Binding Path=SelectedUserConverter, Mode=TwoWay}" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Data utworzenia" Binding="{Binding Created}" Width="*"/>
+                        <DataGridTextColumn Header="Nazwa" Binding="{Binding Name}" Width="*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+
+                <DataGrid Name="dgUserConverterUnits" Grid.Row="1" Grid.Column="0" AutoGenerateColumns="False" DataContext="{Binding ElementName=dgUserConverters, Path=SelectedValue}" ItemsSource="{Binding Units}" SelectedValue="{Binding Path=SelectedUserConverterUnit, Mode=TwoWay}">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Nazwa" Binding="{Binding Name}" Width="*"/>
+                        <DataGridTextColumn Header="Wzór konwersji na jedn. baz." Binding="{Binding ConversionToBaseValueFormula}" Width="2*"/>
+                        <DataGridTextColumn Header="Wzór konwersji z jedn. baz." Binding="{Binding ConversionFromBaseValueFormula}" Width="2*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+
+                <Grid Grid.Column="1" Grid.Row="0" Grid.RowSpan="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Label Content="Konwerter"/>
+                    <Label Content="Nazwa" Grid.Row="1" Grid.Column="0"/>
+                    <TextBox Grid.Row="1" Grid.Column="1" Margin="5,5"  DataContext="{Binding ElementName=dgUserConverters, Path=SelectedValue}" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Grid.Row="3" Grid.ColumnSpan="2" Height="30" Width="80" Content="Zapisz" Margin="5,5" Command="{Binding SaveConverterCommand}"/>
+                    <Button Grid.Row="3" Grid.Column="1" Height="30" Width="80" Content="Usuń" Margin="5,5" Command="{Binding DeleteConverterCommand}"/>
+                    <Button Grid.Row="3" Grid.Column="0" Height="30" Width="80" Content="Utwórz nowy" Margin="5,5" Command="{Binding CreateNewConverterCommand}"/>
+                </Grid>
+                <Grid Grid.Column="1" Grid.Row="1" Grid.RowSpan="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Label Content="Jednostka"/>
+                    <Label Content="Nazwa" Grid.Row="1" Grid.Column="0"/>
+                    <TextBlock Text="Wzór konwersji na jednostkę bazową" TextWrapping="Wrap" Grid.Row="2" Grid.Column="0" Margin="5,5"/>
+                    <TextBlock Text="Wzór konwersji z jednostki bazowej" TextWrapping="Wrap" Grid.Row="3" Grid.Column="0" Margin="5,5"/>
+
+                    <TextBox Grid.Row="1" Grid.Column="1" Height="20" Margin="5,5" DataContext="{Binding ElementName=dgUserConverterUnits, Path=SelectedValue}" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Grid.Row="2" Grid.Column="1" Margin="5,10" Height="20" DataContext="{Binding ElementName=dgUserConverterUnits, Path=SelectedValue}" Text="{Binding ConversionToBaseValueFormula, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Grid.Row="3" Grid.Column="1" Margin="5,5" Height="20" DataContext="{Binding ElementName=dgUserConverterUnits, Path=SelectedValue}" Text="{Binding ConversionFromBaseValueFormula, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Grid.Row="5" Grid.ColumnSpan="2" Height="30" Width="80" Content="Zapisz" Margin="5,5" Command="{Binding SaveConverterUnitCommand}"/>
+                    <Button Grid.Row="5" Grid.Column="1" Height="30" Width="80" Content="Usuń" Margin="5,5" Command="{Binding DeleteConverterUnitCommand}"/>
+                    <Button Grid.Row="5" Grid.Column="0" Height="30" Width="80" Content="Utwórz nową" Margin="5,5" Command="{Binding CreateNewConverterUnitCommand}"/>
+                </Grid>
+            </Grid>
+        </TabItem>
+    </TabControl>
+
 </Window>
