--- a/KonwerterApp/KonwerterApp/MainWindow.xaml
+++ b/KonwerterApp/KonwerterApp/MainWindow.xaml
@@ -27,10 +27,11 @@
         <ComboBox x:Name="ComboBox_JednostkaDocelowa" HorizontalAlignment="Left" Margin="159,124,0,0" VerticalAlignment="Top" Width="69" Height="22"/>
         <TextBlock x:Name="TextBlock_WartoscPoKonwersji" HorizontalAlignment="Left" Margin="17,182,0,0" TextWrapping="Wrap" Text="Wartość po konwersji:" VerticalAlignment="Top" Height="16" Width="116"/>
         <TextBlock x:Name="TextBlock_WartoscPoKonwersji_Wynik" HorizontalAlignment="Left" Margin="154,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="0" Height="16" Width="79"/>
-        <Button x:Name="Button_Zamien" Content="Konwertuj" HorizontalAlignment="Left" Margin="89,203,0,0" VerticalAlignment="Top" Width="75" Click="Button_Zamien_Click"/>
+        <Button x:Name="Button_Zamien" Content="Konwertuj" HorizontalAlignment="Left" Margin="138,206,0,0" VerticalAlignment="Top" Width="75" Click="Button_Zamien_Click"/>
         <TextBlock x:Name="TextBlock_WartoscPrzedKonwersja" HorizontalAlignment="Left" Margin="17,161,0,0" TextWrapping="Wrap" Text="Wartość przed konwersją:" VerticalAlignment="Top" Height="16" Width="147"/>
         <TextBlock x:Name="TextBlock_WartoscPrzedKonwersjaWynik" HorizontalAlignment="Left" Margin="154,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="0" Height="16" Width="79"/>
         <DataGrid x:Name="DataGridWynikowy" HorizontalAlignment="Left" Height="212" Margin="233,10,0,0" VerticalAlignment="Top" Width="406"/>
+        <TextBox x:Name="RequestID_Textbox" HorizontalAlignment="Left" Height="18" Margin="18,207,0,0" TextWrapping="Wrap" Text="RequestID" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
