--- a/Konwerter/App.xaml
+++ b/Konwerter/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Konwerter.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Konwerter"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Konwerter">
     <Application.Resources>
          
     </Application.Resources>
