przed polaczeniem z db

--- a/UnitConverter/UnitConverter/MainWindow.xaml
+++ b/UnitConverter/UnitConverter/MainWindow.xaml
@@ -5,46 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UnitConverter"
         mc:Ignorable="d"
-        Title="Unit Converter" ResizeMode="NoResize" Height="450" Width="900">
+        Title="Unit Converter" ResizeMode="NoResize" Height="600" Width="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="665*"/>
-            <ColumnDefinition Width="229*"/>
-        </Grid.ColumnDefinitions>
         <!-- title label: "Unit Converter" -->
-        <Label Content="Bardzo profesjonalny konwerter" HorizontalAlignment="Left" Margin="30,30,0,0" VerticalAlignment="Top" FontSize="15"/>
+        <Label Content="Bardzo profesjonalny konwerter" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="15"/>
         <!-- first combobox: "Convertion type" -->
-        <Label Content="Wybierz rodzaj konwersji:" HorizontalAlignment="Left" Margin="60,80,0,0" VerticalAlignment="Top" Width="245" Height="30"/>
-        <ComboBox x:Name="ConversionType" SelectedIndex="0" HorizontalAlignment="Left" Margin="70,115,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="ConversionType_SelectionChanged">
+        <Label Content="Wybierz rodzaj konwersji:" HorizontalAlignment="Left" Margin="330,10,0,0" VerticalAlignment="Top" Width="245" Height="30"/>
+        <ComboBox x:Name="ConversionType" SelectedIndex="0" HorizontalAlignment="Left" Margin="340,45,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="ConversionType_SelectionChanged">
             <ComboBoxItem Content="wybierz" HorizontalAlignment="Left" Width="118.4"/>
             <ComboBoxItem Content="Temperatura" HorizontalAlignment="Left" Width="118.4"/>
             <ComboBoxItem Content="Odległość" HorizontalAlignment="Left" Width="118.4"/>
             <ComboBoxItem Content="Masa" HorizontalAlignment="Left" Width="118.4"/>
         </ComboBox>
-        <Label x:Name="ConversionTypeError" Content="" HorizontalAlignment="Left" Margin="195,112,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
+        <Label x:Name="ConversionTypeError" Content="" HorizontalAlignment="Left" Margin="277,76,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
 
         <!-- second combobox: "Convert from" -->
-        <Label Content="Przelicz:" HorizontalAlignment="Left" Height="30" Margin="60,170,0,0" VerticalAlignment="Top" Width="245"/>
-        <ComboBox x:Name="UnitFrom" SelectedIndex="0"  HorizontalAlignment="Left" Margin="70,205,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitFrom_SelectionChanged">
+        <Label Content="Przelicz:" HorizontalAlignment="Left" Height="30" Margin="10,70,0,0" VerticalAlignment="Top" Width="245"/>
+        <ComboBox x:Name="UnitFrom" SelectedIndex="0"  HorizontalAlignment="Left" Margin="10,136,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitFrom_SelectionChanged">
             <ComboBoxItem Content="wybierz" HorizontalAlignment="Left" Width="118.4"/>
         </ComboBox>
-        <TextBox x:Name="ValueFrom" HorizontalAlignment="Left" Height="23" Margin="195,205,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="UnitFromError" Content="" HorizontalAlignment="Left" Margin="320,203,0,0" VerticalAlignment="Top" Foreground="Red" FontWeight="Bold"/>
+        <TextBox x:Name="ValueFrom" HorizontalAlignment="Left" Height="23" Margin="135,136,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="UnitFromError" Content="" HorizontalAlignment="Left" Margin="10,105,0,0" VerticalAlignment="Top" Foreground="Red" FontWeight="Bold"/>
 
         <!-- third combobox: "Convert to" -->
-        <Label Content="Wynik:" HorizontalAlignment="Left" Height="30" Margin="60,233,0,0" VerticalAlignment="Top" Width="245"/>
-        <ComboBox x:Name="UnitTo" SelectedIndex="0" HorizontalAlignment="Left" Margin="70,268,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitTo_SelectionChanged">
+        <Label Content="Wynik:" HorizontalAlignment="Left" Height="30" Margin="539,70,0,0" VerticalAlignment="Top" Width="245"/>
+        <ComboBox x:Name="UnitTo" SelectedIndex="0" HorizontalAlignment="Left" Margin="539,136,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitTo_SelectionChanged">
             <ComboBoxItem Content="wybierz" HorizontalAlignment="Left" Width="118.4"/>
         </ComboBox>
-        <TextBox x:Name="ValueTo" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="195,268,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="UnitToError" Content="" HorizontalAlignment="Left" Margin="320,266,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
+        <TextBox x:Name="ValueTo" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="664,136,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="UnitToError" Content="" HorizontalAlignment="Left" Margin="539,105,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
 
         <!-- -->
-        <Button Content="Przelicz" HorizontalAlignment="Left" Margin="320,233,0,0" VerticalAlignment="Top" Width="75" Height="30" Click="Button_Click"/>
-        <Label x:Name="ButtonError" Content="" HorizontalAlignment="Left" Margin="400,233,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
+        <Button Content="Przelicz" HorizontalAlignment="Left" Margin="362,129,0,0" VerticalAlignment="Top" Width="75" Height="50" Click="Button_Click"/>
+        <Label x:Name="ButtonError" Content="" HorizontalAlignment="Left" Margin="277,183,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
 
         <!-- TEST LABEL -->
-        <Label x:Name="TestLabel"  Content="Testowy label - zmieniaj treść do woli" HorizontalAlignment="Left" Margin="10,381,0,0" VerticalAlignment="Top" Height="30"/>
-        <DataGrid x:Name="StatisticsDataGrid" HorizontalAlignment="Right" Margin="0,30,30,30" Width="400" Grid.ColumnSpan="2"/>
+        <Label x:Name="TestLabel"  Content="Testowa etykieta - zmieniaj treść do woli" HorizontalAlignment="Left" Margin="10,530,0,0" VerticalAlignment="Top" Height="30"/>
+        <DataGrid x:Name="StatisticsDataGrid" HorizontalAlignment="Left" Height="305" Margin="10,220,0,0" VerticalAlignment="Top" Width="774"/>
     </Grid>
 </Window>
