--- a/UnitConverter/UnitConverter/App.xaml
+++ b/UnitConverter/UnitConverter/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="UnitConverter.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UnitConverter"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:UnitConverter">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
