--- a/UnitConverter/UnitConverter/MainWindow.xaml
+++ b/UnitConverter/UnitConverter/MainWindow.xaml
@@ -7,40 +7,37 @@
         mc:Ignorable="d"
         Title="Unit Converter" ResizeMode="NoResize" Height="600" Width="800">
     <Grid>
-        <!-- title label: "Unit Converter" -->
-        <Label Content="Bardzo profesjonalny konwerter" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="15"/>
-        <!-- first combobox: "Convertion type" -->
-        <Label Content="Wybierz rodzaj konwersji:" HorizontalAlignment="Left" Margin="330,10,0,0" VerticalAlignment="Top" Width="245" Height="30"/>
-        <ComboBox x:Name="ConversionType" SelectedIndex="0" HorizontalAlignment="Left" Margin="340,45,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="ConversionType_SelectionChanged">
-            <ComboBoxItem Content="select" HorizontalAlignment="Left" Width="118.4"/>
-            <ComboBoxItem Content="Temperature" HorizontalAlignment="Left" Width="118.4"/>
-            <ComboBoxItem Content="Length" HorizontalAlignment="Left" Width="118.4"/>
-            <ComboBoxItem Content="Mass" HorizontalAlignment="Left" Width="118.4"/>
-        </ComboBox>
-        <Label x:Name="ConversionTypeError" Content="" HorizontalAlignment="Left" Margin="277,76,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
+        <!-- title label: "Very professional unit converter" -->
+        <Label Content="Very professional unit converter" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="15"/>
 
-        <!-- second combobox: "Convert from" -->
-        <Label Content="Przelicz:" HorizontalAlignment="Left" Height="30" Margin="10,70,0,0" VerticalAlignment="Top" Width="245"/>
-        <ComboBox x:Name="UnitFrom" SelectedIndex="0"  HorizontalAlignment="Left" Margin="10,136,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitFrom_SelectionChanged">
-            <ComboBoxItem Content="select" HorizontalAlignment="Left" Width="118.4"/>
+        <!-- first combobox: "Select convertion type" -->
+        <Label Content="Select conversion type:" HorizontalAlignment="Left" Margin="330,10,0,0" VerticalAlignment="Top" Width="245" Height="30"/>
+        <ComboBox x:Name="ConversionType" SelectedIndex="0" HorizontalAlignment="Left" Margin="340,45,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="ConversionType_SelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
         </ComboBox>
+
+        <!-- second combobox: "From:" -->
+        <Label Content="From:" HorizontalAlignment="Left" Height="30" Margin="10,70,0,0" VerticalAlignment="Top" Width="245"/>
+        <ComboBox x:Name="UnitFrom" SelectedIndex="0"  HorizontalAlignment="Left" Margin="10,136,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitFrom_SelectionChanged"/>
         <TextBox x:Name="ValueFrom" HorizontalAlignment="Left" Height="23" Margin="135,136,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="UnitFromError" Content="" HorizontalAlignment="Left" Margin="10,105,0,0" VerticalAlignment="Top" Foreground="Red" FontWeight="Bold"/>
 
-        <!-- third combobox: "Convert to" -->
-        <Label Content="Wynik:" HorizontalAlignment="Left" Height="30" Margin="539,70,0,0" VerticalAlignment="Top" Width="245"/>
-        <ComboBox x:Name="UnitTo" SelectedIndex="0" HorizontalAlignment="Left" Margin="539,136,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitTo_SelectionChanged">
-            <ComboBoxItem Content="select" HorizontalAlignment="Left" Width="118.4"/>
-        </ComboBox>
+        <!-- third combobox: "To:" -->
+        <Label Content="To:" HorizontalAlignment="Left" Height="30" Margin="539,70,0,0" VerticalAlignment="Top" Width="245"/>
+        <ComboBox x:Name="UnitTo" SelectedIndex="0" HorizontalAlignment="Left" Margin="539,136,0,0" VerticalAlignment="Top" Width="120" Height="23" SelectionChanged="UnitTo_SelectionChanged"/>
         <TextBox x:Name="ValueTo" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="664,136,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="UnitToError" Content="" HorizontalAlignment="Left" Margin="539,105,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
 
-        <!-- -->
-        <Button Content="Przelicz" HorizontalAlignment="Left" Margin="362,129,0,0" VerticalAlignment="Top" Width="75" Height="50" Click="Button_Click"/>
+        <!-- button: "Convert" -->
+        <Button Content="Convert" HorizontalAlignment="Left" Margin="362,129,0,0" VerticalAlignment="Top" Width="75" Height="50" Click="Button_Click"/>
         <Label x:Name="ButtonError" Content="" HorizontalAlignment="Left" Margin="277,183,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="Red"/>
 
-        <!-- TEST LABEL -->
-        <Label x:Name="TestLabel"  Content="Testowa etykieta - zmieniaj treść do woli" HorizontalAlignment="Left" Margin="10,530,0,0" VerticalAlignment="Top" Height="30"/>
+        <!-- test label -->
+        <Label x:Name="TestLabel"  Content="Test label - do whatever you want with it" HorizontalAlignment="Left" Margin="10,530,0,0" VerticalAlignment="Top" Height="30"/>
         <DataGrid x:Name="StatisticsDataGrid" HorizontalAlignment="Left" Height="305" Margin="10,220,0,0" VerticalAlignment="Top" Width="774"/>
     </Grid>
 </Window>
