== Zaliczenie - nowy konwerter == DataCapacity.cs - Gigabyte, Bluray

--- a/UnitConverter/UnitConverter.Web/Views/Home/Index.cshtml
+++ b/UnitConverter/UnitConverter.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<h1>Konwerter jednostek</h1>
+<h1>Very professional unit converter</h1>
 
 @foreach (UnitConverter.Converters.IConverter converter in Model) {
     string resultId = converter.Name + "Result";
